Adding .env variables

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,10 @@ frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 
-.env
+/.env
+.env.development
+.env.production
+
 
 .vscode
 
