--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.7.2
+-i https://pypi.org/simple
+asgiref==3.7.2; python_version >= '3.7'
 colorama==0.4.6
-Django==4.2.4
+django==4.2.4
 django-cors-headers==4.2.0
 django-taggit==4.0.0
-sqlparse==0.4.4
-tzdata==2023.3
+pillow==10.0.0
+sqlparse==0.4.4; python_version >= '3.5'
+tzdata==2023.3; sys_platform == 'win32'
