--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-howler": "^5.2.0",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.64.1",
